--- a/git/.gitignore
+++ b/git/.gitignore
@@ -8,7 +8,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+# Icon
 
 # Thumbnails
 ._*
@@ -162,3 +162,8 @@ yarn-error.log
 ############################
 
 diagnosis_log.txt
+
+############################
+# JAVA
+############################
+target/
